# superquadric-lib

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
bindings/: CMakeLists.txt  README.md  eigen.i  superquadric_bindings.i
cmake/: InstallBasicPackageFiles.cmake
misc/: README.md  example-bottle  example-drill
src/: CMakeLists.txt
src/SuperquadricLib/: CMakeLists.txt
src/SuperquadricLib/SuperquadricGrasp/: CMakeLists.txt
src/SuperquadricLib/SuperquadricGrasp/include/: graspComputation.h  graspPoses.h
src/SuperquadricLib/SuperquadricGrasp/include/SuperquadricLibGrasp/: graspComputation.h  graspPoses.h
src/SuperquadricLib/SuperquadricGrasp/src/: graspComputation.cpp  graspPoses.cpp
src/SuperquadricLib/SuperquadricModel/: CMakeLists.txt
src/SuperquadricLib/SuperquadricModel/cmake/: FindIPOPT.cmake
src/SuperquadricLib/SuperquadricModel/include/: options.h  pointCloud.h  superqEstimator.h  superquadric.h  superquadricEstimator.h  tree.h
src/SuperquadricLib/SuperquadricModel/include/SuperquadricLibModel/: options.h  pointCloud.h  superquadric.h  superquadricEstimator.h  tree.h
src/SuperquadricLib/SuperquadricModel/src/: options.cpp  pointCloud.cpp  superquadric.cpp  superquadricEstimator.cpp  tree.cpp
src/SuperquadricLib/SuperquadricVis/: CMakeLists.txt
src/SuperquadricLib/SuperquadricVis/include/: Plane.h  graspingPose.h  planeVis.h  pointCloud.h  pointsVis.h  poseVis.h  superqVis.h  superquadric.h  vis.h  visRenderer.h  vtk.h  vtkPlane.h  vtkPoints.h  vtkPose.h  vtkSuperq.h
src/SuperquadricLib/SuperquadricVis/include/SuperquadricLibVis/: planeVis.h  pointsVis.h  poseVis.h  superqVis.h  vis.h  visRenderer.h
src/SuperquadricLib/SuperquadricVis/src/: planeVis.cpp  pointsVis.cpp  poseVis.cpp  superqVis.cpp  vis.cpp  visRenderer.cpp  vtk.cpp  vtkPoints.cpp  vtkPose.cpp  vtkSuperq.cpp
src/SuperquadricPipeline/: CMakeLists.txt  README.md  main.cpp
src/SuperquadricPipeline/multiple-superq/: CMakeLists.txt  main.cpp
src/SuperquadricPipeline/single-superq/: CMakeLists.txt  main.cpp
src/SuperquadricPipeline/yarp-demo/: CMakeLists.txt  README.md
src/SuperquadricPipeline/yarp-demo/app/conf/: config-icub.ini
src/SuperquadricPipeline/yarp-demo/app/scripts/: superquadric-lib-yarp-demo.xml.template
src/SuperquadricPipeline/yarp-demo/src/: idl.thrift  main.cpp
test/: CMakeLists.txt  test.cpp
test/test_superqLibModel/: CMakeLists.txt  test.cpp
